# $Id: CHANGELOG,v 1.83 2003/12/07 16:35:14 jaco Exp $

* Sun, Dec 07, 2003, 0.5.7-cvs
  + Buchan Milne <bgmilne@cae.co.za>:
    [halt.local]:
      - Added for custom commands to be executed at shutdown, eg.
        CD eject ('noeject' boot option disables CD eject)
    [linuxrc]:
      - Fix error on illegal attempt to unmount /initrd/cdrom upon
        system shutdown
      - Added hostname= boot option to set the hostname
    [mklivecd]:
      - Add support ('--extraisofiles' option) for adding
        additional files to the root of the LiveCD ISO image
        (ie to see when browsing the CD normally)
  + Jaco Greeff <jaco@linuxminicd.org>:
    [FAQ]:
      - Point to the gif2lss program in the boot splash section
    [README]:
      - Updated to point to the new LiveCD home of mklivecd,
        http://developer.berlios.de/projects/livecd/ with the
        correct mailing list info
    [Modules.mk]:
      - Remove AIC7xxx_old module (hangs Adaptec cards with
        AIC7xxx loaded already)
    [Rules.mk]:
      - Created list for default normal and SCSI modules
      - Created listing for optional modules
      - Split modules into Modules.mk
      - Force date calculation to LC_ALL=C locale for decent CVS
        spec generation
    [hwdetect]:
      - PS/2 mice should now work in wheel and non-wheel modes.
        Thanks to Texstar <texstar@houston.rr.com> for ideas and
        investigation. Threads around this are available from:
        http://lists.berlios.de/pipermail/minicd-scripts/2003-October/000229.html
      - Allow xres=1024x768|1280x1024|1400x1050|1600x1400 to
        specify the resolution in the case where the monitor
        cannot be reliably detected, eg. laptop panels
      - Add xbpp option to specify the X depth
      - Add support for Nvidia GLX drivers
      - Add support for ATI GLX drivers
      - Detect USB Flash devices and mount them rw
      - s/LIVECD.MNT/livecd.mnt/
      - Updated URL: http://livecd.berlios.de