@@ -1,4 +1,4 @@
-# $Id: mklivecd.spec.in,v 1.21 2003/12/07 15:24:41 jaco Exp $
+# $Id: mklivecd.spec.in,v 1.22 2003/12/07 17:11:11 jaco Exp $
 
 %define name	mklivecd
 %define version	@MKLIVECDVER@
@@ -36,7 +36,7 @@ rm -rf %buildroot
 
 %files
 %defattr(-,root,root)
-%doc AUTHORS COPYING CHANGELOG FAQ README TODO
+%doc AUTHORS BOOTCODES COPYING CHANGELOG FAQ README TODO
 %{_sbindir}/mklivecd
 %{_sbindir}/hwdetect
 %dir %{_datadir}/mklivecd
