@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.83 2003/12/07 16:35:14 jaco Exp $
+# $Id: CHANGELOG,v 1.84 2003/12/07 17:11:11 jaco Exp $
 
 * Sun, Dec 07, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -110,6 +110,8 @@
       - Updated to allow for rpmbuild -ta <tarball> to work for
         a CVS snapshot generated via 'make dist'
   + Jaco Greeff <jaco@linuxminicd.org>:
+    [BOOTCODES]:
+      - Added
     [FAQ]:
       - Updated to include some compression parameter
         statistics (describes mklivecd '--blocksize' and
